--- a/T3kCfgFE/dialog.ui
+++ b/T3kCfgFE/dialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>433</width>
-    <height>458</height>
+    <height>489</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -69,6 +69,12 @@
      </item>
      <item>
       <widget class="QLabel" name="lblSoftlogicInfo">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="minimumSize">
         <size>
          <width>0</width>
@@ -231,13 +237,19 @@
        <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
-         <height>40</height>
+         <height>0</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <widget class="QCheckBox" name="chkSafeMode">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="focusPolicy">
         <enum>Qt::TabFocus</enum>
        </property>
@@ -312,7 +324,7 @@ QCheckBox:checked {
          </property>
          <property name="minimumSize">
           <size>
-           <width>120</width>
+           <width>126</width>
            <height>0</height>
           </size>
          </property>
@@ -334,7 +346,7 @@ QCheckBox:checked {
          </property>
          <property name="minimumSize">
           <size>
-           <width>120</width>
+           <width>126</width>
            <height>0</height>
           </size>
          </property>
@@ -352,7 +364,7 @@ Window...</string>
      <item>
       <widget class="QTextEdit" name="txtEdtDisplayFirmware">
        <property name="enabled">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -362,8 +374,8 @@ Window...</string>
        </property>
        <property name="minimumSize">
         <size>
-         <width>153</width>
-         <height>110</height>
+         <width>130</width>
+         <height>120</height>
         </size>
        </property>
        <property name="focusPolicy">
@@ -386,6 +398,9 @@ Window...</string>
        <property name="horizontalScrollBarPolicy">
         <enum>Qt::ScrollBarAlwaysOff</enum>
        </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
@@ -398,8 +413,8 @@ Window...</string>
        </property>
        <property name="minimumSize">
         <size>
-         <width>120</width>
-         <height>110</height>
+         <width>126</width>
+         <height>120</height>
         </size>
        </property>
        <property name="focusPolicy">
