--- a/T3kCfgFE/QDetectionDialog.ui
+++ b/T3kCfgFE/QDetectionDialog.ui
@@ -242,7 +242,7 @@
        </property>
        <property name="sizeHint" stdset="0">
         <size>
-         <width>40</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -273,11 +273,11 @@
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeType">
-        <enum>QSizePolicy::Maximum</enum>
+        <enum>QSizePolicy::Expanding</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
-         <width>5</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
