--- a/T3kCfgFE/QGestureProfileDialog.ui
+++ b/T3kCfgFE/QGestureProfileDialog.ui
@@ -61,6 +61,9 @@
          <property name="spacing">
           <number>2</number>
          </property>
+         <property name="leftMargin">
+          <number>10</number>
+         </property>
          <item>
           <widget class="QLabel" name="lblInputModeMouse">
            <property name="minimumSize">
@@ -72,7 +75,7 @@
            <property name="styleSheet">
             <string notr="true">QLabel {
 	/*border-color: rgb(115, 154, 206);*/
-	color : rgb(55, 100, 160);
+	color : rgb(80, 80, 80);
 /*    border-style: solid;*/
 /*    border-width: 2px;*/
 	font-weight: bold;
@@ -94,7 +97,7 @@
            <property name="styleSheet">
             <string notr="true">QLabel {
 	/*border-color: rgb(115, 154, 206);*/
-	color : rgb(55, 100, 160);
+	color : rgb(80, 80, 80);
 /*    border-style: solid;*/
 /*    border-width: 2px;*/
 	font-weight: bold;
