--- a/T3kCfgFE/QTouchSettingDialog.ui
+++ b/T3kCfgFE/QTouchSettingDialog.ui
@@ -964,8 +964,8 @@
        </property>
        <property name="sizeHint" stdset="0">
         <size>
-         <width>40</width>
-         <height>20</height>
+         <width>0</width>
+         <height>0</height>
         </size>
        </property>
       </spacer>
@@ -995,11 +995,11 @@
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeType">
-        <enum>QSizePolicy::Fixed</enum>
+        <enum>QSizePolicy::Expanding</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
-         <width>20</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -1074,14 +1074,14 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>QBorderStyleEdit</class>
-   <extends>QTextEdit</extends>
-   <header>QBorderStyleEdit.h</header>
-  </customwidget>
-  <customwidget>
    <class>QUnderlineTitle</class>
    <extends>QLabel</extends>
    <header>QUnderlineTitle.h</header>
+  </customwidget>
+  <customwidget>
+   <class>QBorderStyleEdit</class>
+   <extends>QTextEdit</extends>
+   <header>QBorderStyleEdit.h</header>
   </customwidget>
   <customwidget>
    <class>QAreaSettingForm</class>
