--- a/T3kCfgFE/dialog.ui
+++ b/T3kCfgFE/dialog.ui
@@ -27,7 +27,16 @@
    <property name="spacing">
     <number>2</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>14</number>
+   </property>
+   <property name="topMargin">
+    <number>14</number>
+   </property>
+   <property name="rightMargin">
+    <number>14</number>
+   </property>
+   <property name="bottomMargin">
     <number>14</number>
    </property>
    <item>
@@ -387,6 +396,8 @@ Window...</string>
 	border-style: solid;
 	border-width: 2px;
 	background-color: rgb(240, 240, 240);
+	font-family:Arial;
+	font-size: 10pt;
  }</string>
        </property>
        <property name="frameShape">
