--- a/T3kCfgFE/QTouchSettingDialog.ui
+++ b/T3kCfgFE/QTouchSettingDialog.ui
@@ -917,6 +917,9 @@
            <height>400</height>
           </size>
          </property>
+         <property name="focusPolicy">
+          <enum>Qt::StrongFocus</enum>
+         </property>
         </widget>
        </item>
       </layout>
@@ -1068,6 +1071,11 @@
  </widget>
  <customwidgets>
   <customwidget>
+   <class>QBorderStyleEdit</class>
+   <extends>QTextEdit</extends>
+   <header>QBorderStyleEdit.h</header>
+  </customwidget>
+  <customwidget>
    <class>QCmdAsyncManagerCtrl</class>
    <extends>QWidget</extends>
    <header>QCmdAsyncManagerCtrl.h</header>
@@ -1077,11 +1085,6 @@
    <class>QUnderlineTitle</class>
    <extends>QLabel</extends>
    <header>QUnderlineTitle.h</header>
-  </customwidget>
-  <customwidget>
-   <class>QBorderStyleEdit</class>
-   <extends>QTextEdit</extends>
-   <header>QBorderStyleEdit.h</header>
   </customwidget>
   <customwidget>
    <class>QAreaSettingForm</class>
@@ -1112,8 +1115,12 @@
   <tabstop>txtEdtWheel</tabstop>
   <tabstop>horzSliderZoom</tabstop>
   <tabstop>txtEdtZoom</tabstop>
+  <tabstop>gbAutoSelect</tabstop>
+  <tabstop>btnMouse</tabstop>
+  <tabstop>btnMultitouch</tabstop>
   <tabstop>btnFull</tabstop>
   <tabstop>btnDigitizerOnly</tabstop>
+  <tabstop>widgetAreaSetting</tabstop>
   <tabstop>btnReset</tabstop>
   <tabstop>btnGestureProfile</tabstop>
   <tabstop>btnRefresh</tabstop>
