--- a/T3kSoftlogic/TabKeyDesignWidget.ui
+++ b/T3kSoftlogic/TabKeyDesignWidget.ui
@@ -443,13 +443,29 @@
       <property name="minimumSize">
        <size>
         <width>0</width>
-        <height>20</height>
+        <height>18</height>
        </size>
       </property>
       <property name="text">
        <string>Key design</string>
       </property>
      </widget>
+    </item>
+    <item>
+     <spacer name="verticalSpacer">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Minimum</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>10</height>
+       </size>
+      </property>
+     </spacer>
     </item>
     <item>
      <layout class="QHBoxLayout" name="InfoLayout">
@@ -518,7 +534,7 @@
       <property name="minimumSize">
        <size>
         <width>0</width>
-        <height>20</height>
+        <height>18</height>
        </size>
       </property>
       <property name="text">
